--- a/MPWIKI/index.html
+++ b/MPWIKI/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <div class="wrap">
-  <h1>Moottoripyörä Wiki</h1>
+  <h1 class="otsikkoHeader">
+    <img src="images/headerHarley.jpg" id="headerKuva">
+  </h1>
   <ul id="menu">
     <li><button type="button" class="button" id="harleyButton">Harley</button></li>
     <li><button type="button" class="button" id="hondaButton">Honda</button></li>
@@ -17,17 +19,17 @@
   </ul>
   <div class="clear"></div>
   <div id="teksti">
-    <h2>Moottoripyörä</h2>
+    <h2 class="otsikot">Moottoripyörä</h2>
     <p id="MPinfo" class="info">Moottoripyörä on ajoneuvoluokan L3e kaksipyöräinen moottorikäyttöinen ajoneuvo, jossa pyörät ovat peräkkäin samassa linjassa. Moottoripyörään voidaan liittää myös sivuvaunu, jolloin siitä tulee luokan L4e ajoneuvo, joka ei silti ole kolmipyörä (L5e) koska sen pyörät eivät ole symmetrisesti sijoitettu.
       Moottoripyörää, jonka suurin rakenteellinen nopeus on 45 km/h ja iskutilavuus enintään 50 cm3 sanotaan mopoksi. Mopo eroaa moottoripyörästä lähinnä moottorin koon ja tehon, sekä huippunopeuden osalta, mutta on usein myös kooltaan pienempi.
     </p>
   </div>
 <div id="teksti">
-  <h3>Moottoripyörä on Moottoripyörä</h3>
+  <h2 class="otsikot">Moottoripyörä on Moottoripyörä</h2>
   <iframe width="560" height="315"
 src="https://www.youtube.com/embed/eTkqTlCwAgY">
 </iframe>
-<h4>LAULUN SANAT</h4>
+<h2 class="otsikot">Laulun sanat</h2>
   <p id="laulu" class="info">Ostin Harley-Daavidssonin, sillä ajelen iltaisin.
 Varmaan lähtee startista käyntiin nääs.
 Kato pyörä on tuhannen kuutioinen, satula tiikerinnahkainen,
@@ -60,15 +62,15 @@ Moottoripyörä on moottoripyörä, skootteri on lälläripyörä,
 Namusia naisia katsastan, moottoripyörällä, moottoripyörällä, moottoripyörällä ratsastan.
 </br></br></p>
 </div>
-  <div id="kuva">
-
-  </div>
 </div>
 </br>
+<div class="fixed">
+<a href="https://www.nettimoto.com">  <img src="images/nettimotoLogo.png" width="100px"></a>
+</div>
 <div id="footer">
   <div class="wrap">
     <div id="col">
-      <p id="alatxt">Copyright 2018 </br> Kim Rekilä, Oskar Sundholm, Mika Sundqvist</p>
+      <p id="alatxt">Copyright 2018 </br> Kim Rekilä, Oskar Sundholm, Lauri Rantasalo, Mika Sundqvist</p>
     </div>
     <div class="clear"></div>
   </div>
