--- a/MPWIKI/triumph.html
+++ b/MPWIKI/triumph.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Triumph</title>
+<title>Harley Davidson</title>
+<link rel="stylesheet" href="css/triumphStyle.css" type="text/css" />
+<script src="js/triumph.js"></script>
 </head>
 <body>
-<h1><a href="index.html">Moottoripyörä Wiki</a></h1>
+<h1><button type="button" class="button" id="wikiButton">MoottoripyöräWiki</button></h1>
+<div class="info">
+  <i>"Triumph Motorcycles on englantilainen moottoripyörävalmistaja, joka perustettiin alun perin Coventryssä 1889. Toisen maailmansodan jälkeen tehtaat siirrettiin Merideniin. Yhtiö lopetti toimintansa 1983, jonka jälkeen kiinteistösijoittaja John Bloor hankki oikeudet nimeen. Hän perusti uuden Triumphin Hinckleyhyn Leicestershireen, jonka valmistamat Triumph-moottoripyörät tulivat markkinoille 1990.
+
+Tämä artikkeli käsittelee molempia - historiallista Triumphia ja modernia yhtiötä, joka toimii nimellä Triumph Motorcycles Ltd." </i> -Wikipedia
+</div>
+<div class="image">
+<img src="images/triumphKuva.jpg" id="triumphKuva">
+</div>
 </body>
 </html>
